examples/errors/class_incomplete_init/main.lc

class A {

    name: string

}

function main () {
    let a = A {};
}
